# JangLabs-ClaudePipe

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.serena/: project.yml
channels-kit/: PARITY.md  README.md  acp-facade.mjs  channel-server-entry.mjs  channel-server.mjs  cli.mjs  index.mjs  lifecycle.mjs  package-lock.json  package.json  protocol.mjs  transports.mjs
channels-kit/test/: facade.test.mjs
docs/: acp-transport-impl-plan.md  acp-transport-spec.md  advisory-reconciliation-20260702.md  channels-kit-plan.md  fork-build-decisions-20260702.md  lean-parity-measurement-pass-20260701.md  serving-turnbridge-switchtail.md
docs/examples/channel-probe/: .mcp.json  README.md  package.json  server.mjs
scripts/: claude-channels-bridge.mjs  cmd-key-watcher.py  hey-claude-up.sh  hey-claude.sh  package-lock.json  package.json  rewrite-prompt.txt  zellij-field.sh
src/: acp.rs  client.rs  control.rs  daemon.rs  main.rs  protocol.rs  recipe.rs  relay.rs  supervisor.rs
tests/: verify.sh
tests/support/: acp-client.mjs  delegate-live.mjs  mock-acp-agent.mjs  steal-midturn.mjs
