[package]
name = "claude-pipe"
version = "0.1.0"
edition = "2021"
description = "A lean, standalone request/reply pipe to a persistent Claude Code agent process."

[[bin]]
name = "claude-pipe"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "io-util", "io-std", "sync", "time", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 2
lto = "thin"
